--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *mp4 filter=lfs diff=lfs merge=lfs -text
+v3/static/bg.mp4 filter=lfs diff=lfs merge=lfs -text
+v3/static/bg.mp4 filter=lfs diff=lfs merge=lfs -text
