--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 services:
   - type: web
-    name: offer-t
+    name: tsa-bonanza
     env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
     plan: free
-    autoDeploy: true
+    buildCommand: "cd v3 && pip install -r requirements.txt"
+    startCommand: "cd v3 && gunicorn app:app"
